--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="/Den2908/styles.css" rel="stylesheet"> 
 </head> 
 <body> 
-<video src="Den2908/1.mp4" muted autoplay loop></video>
+<video src="Den2908/1.mp4" autoplay loop></video>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
@@ -17,7 +17,7 @@
 </div> 
 </div> 
 <div class="telegram"> 
-Telegram: @Den29082001 
+Telegram: @Den2908
 </div> 
 </body>
 </html>
