--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <link href="/Den2908/styles.css" rel="stylesheet"> 
 </head> 
 <body> 
-<video src="Den2908/1.mp4" autoplay loop></video>
+<iframe src="12.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+<video id="player" autoplay loop><source src="Den2908/1.mp4" type="video/mp4"></video>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
