--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link href="/Den2908/styles.css" rel="stylesheet"> 
 </head> 
 <body> 
-<iframe src="Den2908/12.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-<video id="player" autoplay loop><source src="Den2908/1.mp4" type="video/mp4"></video>
+<embed src="12.mp3" type="Den2908/mp3" autostart="true" hidden="true">
+<video id="player" autoplay controls><source src="Den2908/1.mp4" type="video/mp4"></video>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
