--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 <link href="/Den2908/styles.css" rel="stylesheet"> 
 </head> 
 <body> 
-<embed src="12.mp3" type="Den2908/mp3" autostart="true" hidden="true">
-<video id="player" autoplay controls><source src="Den2908/1.mp4" type="video/mp4"></video>
+<video controls style="display:none" id="audio">
+<source src="Den2908/12.mp4" type="video/mp4">
+</video>
+<script>
+document.getElementById('audio').play();
+</script>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
