--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="/Den2908/styles.css" rel="stylesheet"> 
 </head> 
 <body> 
-<video controls="" id="audio">
+<video id="audio">
 <source src="Den2908/1.mp4" type="video/mp4">
 </video>
 <script>
