--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 </head> 
 <body> 
 <video id="audio">
-<source src="Den2908/1.mp4" type="video/mp4">
+<source src="Den2908/1.mp4" autoplay=autoplay" type="video/mp4">
 </video>
-<script>
-document.getElementById('audio').play();
-</script>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
