--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> 
 <body> 
 <video id="audio">
-<source src="Den2908/1.mp4" autoplay=autoplay" type="video/mp4">
+<source src="Den2908/1.mp4" autoplay="autoplay" type="video/mp4">
 </video>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
