--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <link href="/Den2908/styles.css" rel="stylesheet"> 
 </head> 
 <body> 
-<video id="audio" autoplay>
-<source src="Den2908/1.mp4" type="video/mp4">
-</video>
+<video src="Den2908/1.mp4" muted autoplay="" loop=""></video>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
