--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head> 
 <body> 
 <video src="Den2908/1.mp4" muted autoplay="" loop=""></video>
+<button id="volume">Звук</button>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
