--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> 
 <body>
 <video id="video" src="Den2908/1.mp4" muted autoplay="" loop=""></video>
-<button id="volume">Звук</button>
+<button id="volume"><img src="Den2908/volume-up-solid.svg"></img></button>
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
