--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <div class="block">
 <div class="nickname animated bounceInDown">Den2908</div> 
 <div class="media animated bounceInDown"> 
-<a href="https://vk.com/den2908_n" target="_blank"><i class="fa fa-vk"></i></a> 
-<a href="https://www.youtube.com/channel/UClpE3773ZagI5y1huhpucXw" target="_blank"><i class="fa fa-youtube-play"></i></a> 
-<a href="http://steamcommunity.com/id/den2908" target="_blank"><i class="fa fa-steam-square"></i></a> 
+<a href="https://vk.com/den2908_n" target="_blank"><img src="Den2908/vk.svg"></a> 
+<a href="https://www.youtube.com/channel/UClpE3773ZagI5y1huhpucXw" target="_blank"><img src="Den2908/youtube.svg"></a> 
+<a href="http://steamcommunity.com/id/den2908" target="_blank"><img src="Den2908/steam.svg"></a> 
 </div> 
 </div> 
 <div class="telegram"> 
