--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Den2908</title>
 <body>
 </body>
-<link href="/Den2908/styles.css" rel="stylesheet"> 
+<link href="/Den2908/styles.css" rel="stylesheet">
+<link rel="icon" type="image/png" href="favicon.png" />
 </head> 
 <body>
 <video id="video" src="Den2908/1.mp4" muted autoplay="" loop=""></video>
