--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 </div> 
 <div class="telegram"> 
 Telegram: @Den2908
-</div> 
+</div>
+<script>
+var video = document.getElementById("video");
+var volume = document.getElementById("volume");
+
+volume.addEventListener('click', function() {
+    video.muted = (video.muted == false) ? true : false;
+});
+</script> 
 </body>
 </html>
